@@ -12,7 +12,7 @@ import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableSwagger2
@@ -26,7 +26,7 @@ public class SwaggerConfiguration {
                 .paths(PathSelectors.any())
                 .build()
                 .apiInfo(appInfo())
-                .securitySchemes(Arrays.asList(apiKey()));
+                .securitySchemes(List.of(apiKey()));
     }
 
     private ApiKey apiKey() {
